Fix z-index

--- a/webapp/app/components/session-overview/component.scss
+++ b/webapp/app/components/session-overview/component.scss
@@ -3,7 +3,7 @@
         position: -webkit-sticky;
         position: sticky;
         top: 0px;
-        z-index: $zindex-sticky;
+        z-index: 1;
         background: white;
     }
 }
